# Dentra

./: .gitignore  README.md  feature_2.txt  index.html  package-lock.json  package.json  tsconfig.json
docs/: ARCHITECTURE.md  DB_SCHEMA.md  FEATURES.md  PRINT_TEMPLATES.md  SPEC.md
skills/: DEVELOPER_SKILL.md  PRODUCT_OWNER_SKILL.md  STAFF_ENGINEER_SKILL.md  dentra-developer.skill  dentra-product-owner.skill  dentra-staff-engineer.skill
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_initial.sql  002_add_payment_method.sql  003_seed_admin_user.sql  004_users_permissions.sql
src-tauri/src/: main.rs
src-tauri/src/commands/: appointments.rs  backup.rs  doctors.rs  expenses.rs  labwork.rs  license.rs  mod.rs  patients.rs  settings.rs  users.rs
src-tauri/src/db/: mod.rs
src/hooks/: useAppointments.ts  useAuth.ts  useDoctors.ts  useExpenses.ts  useLabwork.ts  usePatients.ts  useSettings.ts
src/i18n/: ar.ts  en.ts  fr.ts
src/pages/: CalendarPage.tsx  DoctorsPage.tsx  ExpensesPage.tsx  LabworkPage.tsx  LicenseGatePage.tsx  LoginPage.tsx  PatientsPage.tsx  SettingsPage.tsx  StatsPage.tsx
src/services/: backup.ts  db.ts  license.ts  print.ts  whatsapp.ts
src/store/: appointmentsStore.ts  authStore.ts  doctorsStore.ts  expensesStore.ts  labworkStore.ts  patientsStore.ts  settingsStore.ts
src/types/: index.ts
src/utils/: currency.ts  dates.ts  id.ts
tickets/: .counter.json
tickets/dev_tasks/: DEV_0001.md  DEV_0002.md  DEV_0003.md  DEV_0004.md  DEV_0005.md  DEV_0006.md  DEV_0007.md  DEV_0008.md  (+3 more)
(+4 files in other folders)
