[package]
name = "dentra"
version = "0.1.0"
description = "Dentra — Dental Clinic Management for Algerian Practices"
authors = []
edition = "2021"

[lib]
name = "dentra_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
tokio = { version = "1", features = ["full"] }

chrono = { version = "0.4", features = ["serde"] }

# License key generation
hmac = "0.12"
sha2 = "0.10"
base32 = "0.4"
rand = "0.8"

# Backup
zip = "2"

# Machine ID
hostname = "0.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
